对图片、js、css等静态资源进行测试

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
 			<resource>
 				<directory>${basedir}/src/main/resources</directory>
 			</resource>
+			<resource>
+				<directory>${basedir}/src/main/view</directory>
+			</resource>
 		</resources>
 
 	<plugins>
