--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,8 +1,14 @@
 #包前缀
 PACKAGE_PREFIX=com.gj.web
 
-#view页面根路径
-VIEW_BASE_PATH=com/gj/web/view/
+#view页面根路径（相对classes文件夹）
+VIEW_BASE_PATH=page/
+
+#静态资源路劲（相对于项目根目录）
+STATIC_RESOURCE_PATH=static/
+
+#controller包路径，配置后可通过annocation直接配置
+controller.package=com.gj.web.controller
 
 #url与controller类对应关系
-url/list=com.gj.web.controller.MyController
+#url/list=com.gj.web.controller.MyController
