--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -7,6 +7,9 @@ VIEW_BASE_PATH=page/
 #静态资源路劲（相对于项目根目录）
 STATIC_RESOURCE_PATH=static/
 
+#端口
+httpserver.port=8888
+
 #controller包路径，配置后可通过annocation直接配置
 controller.package=com.gj.web.controller
 
