--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -4,7 +4,7 @@ PACKAGE_PREFIX=com.gj.web
 #view页面根路径（相对classes文件夹）
 VIEW_BASE_PATH=page/
 
-#静态资源路劲（相对于项目根目录）
+#静态资源路劲（相对classes文件夹）
 STATIC_RESOURCE_PATH=static/
 
 #端口
