--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
 encoding//src/main/resources/velocity.properties=UTF-8
 encoding//src/main/resources/web.properties=UTF-8
+encoding//src/main/view=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
