--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -1,11 +1,11 @@
 #包前缀
 PACKAGE_PREFIX=com.gj.web
 
-#view页面根路径（相对classes文件夹）
-VIEW_BASE_PATH=page/
+#模板页面根路径（相对classes文件夹,项目src/main/view下）
+VIEW_BASE_PATH=page
 
-#静态资源路劲（相对classes文件夹）
-STATIC_RESOURCE_PATH=static/
+#静态资源路劲（相对classes文件夹,项目src/main/view下）
+STATIC_RESOURCE_PATH=static
 
 #端口
 httpserver.port=8888
