--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -13,5 +13,5 @@ httpserver.port=8888
 #controller包路径，配置后可通过annocation直接配置
 controller.package=com.gj.web.controller
 
-#url与controller类对应关系
+#url与controller类对应关系(废弃，仅支持注解方式配置)
 #url/list=com.gj.web.controller.MyController
