--- a/src/main/resources/web.properties
+++ b/src/main/resources/web.properties
@@ -15,3 +15,6 @@ controller.package=com.gj.web.controller
 
 #url与controller类对应关系(废弃，仅支持注解方式配置)
 #url/list=com.gj.web.controller.MyController
+
+#session超时时间(分钟)
+session_timeout = 1
