--- a/pom.xml
+++ b/pom.xml
@@ -37,28 +37,60 @@
 				<directory>${basedir}/src/main/view</directory>
 			</resource>
 		</resources>
-
 	<plugins>
-		<plugin>
-			<artifactId>maven-assembly-plugin</artifactId>
-			<version>2.2-beta-2</version>
-			<configuration>
-				<finalName>${project.artifactId}</finalName>
-				<descriptors>
-					<descriptor>src/main/assembly/distribution.xml</descriptor>
-				</descriptors>
-			</configuration>
-			<executions>
-				<execution>
-					<id>make-assembly</id>
-					<phase>package</phase>
-					<goals>
-						<goal>single</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+					<compilerArguments>
+						<verbose />
+						<bootclasspath>${java.home}/lib/rt.jar</bootclasspath>
+					</compilerArguments>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-2</version>
+				<configuration>
+					<finalName>${project.artifactId}</finalName>
+					<descriptors>
+						<descriptor>src/main/assembly/distribution.xml</descriptor>
+					</descriptors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>   
+		        <groupId>org.apache.maven.plugins</groupId>   
+		        <artifactId>maven-surefire-plugin</artifactId>   
+		        <version>2.4.2</version>   
+		        <configuration>   
+		          <skipTests>true</skipTests>   
+		        </configuration>   
+		    </plugin>
+		</plugins>
  </build>
  
  
