--- a/src/main/resources/velocity.properties
+++ b/src/main/resources/velocity.properties
@@ -1,2 +1,4 @@
 resource.loader=class
 class.resource.loader.class=org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
+input.encoding=utf-8
+output.encoding=utf-8
